--- a/hello-world-api-gateway.yaml
+++ b/hello-world-api-gateway.yaml
@@ -12,6 +12,8 @@ spec:
     metadata:
       labels:
         bb: web
+        app: hello-world
+        run: api-gateway
     spec:
       containers:
       - name: apigateway
@@ -23,4 +25,85 @@ spec:
           value: world-service.helloworld.svc.cluster.local
       imagePullSecrets:
       - name: registry-canisterio
+      
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-gateway
+  namespace: helloworld
+spec:
+  selector:
+    run: api-gateway
+  ports:
+  - name: http 
+    port: 80
+    targetPort: 80
+    
+---
+
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: hwapi-ms-ktogias-gr-credential-staging
+  namespace: helloworld
+  labels:
+    use-http01-solver: "true"
+  annotations:
+          #  cert-manager.io/issue-temporary-certificate: "true"
+          acme.cert-manager.io/http01-edit-in-place: "true"
+spec:
+  dnsNames:
+    - hwapi.ms.ktogias.gr
+  secretName: hwapi-ms-ktogias-gr-credential-staging
+  issuerRef:
+    name: letsencrypt-staging
+    kind: ClusterIssuer
+  commonName: hwapi.ms.ktogias.gr
+
+---
+
+apiVersion: networking.istio.io/v1alpha3
+kind: Gateway
+metadata:
+  name: hwapi-ms-ktogias-gr-gateway
+  namespace: helloworld
+spec:
+  selector:
+    istio: ingressgateway # use Istio default gateway implementation
+  servers:
+  - port:
+      number: 443
+      name: https
+      protocol: HTTPS
+    tls:
+      mode: SIMPLE
+      credentialName: hwapi-ms-ktogias-gr-credential-staging
+      # privateKey: sds
+      # serverCertificate: sds
+    hosts:
+    - "hwapi.ms.ktogias.gr"
+    
+---
+
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: hwapi-ms-ktogias-gr
+  namespace: helloworld
+spec:
+  hosts:
+  - "hwapi.ms.ktogias.gr"
+  gateways:
+  - hwapi-ms-ktogias-gr-gateway
+  http:
+  - match:
+    - uri:
+        prefix: /
+    route:
+    - destination:
+        port:
+          number: 80
+        host: api-gateway
       
