--- a/hello-world-ui.yaml
+++ b/hello-world-ui.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway
+  name: helloworld-ui
 spec:
   selector:
     app: hello-world
